<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgadd"
    tools:context=".AddActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="198dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="18dp"
            android:gravity="center"
            android:text="@string/tvTitleEditAc"
            android:textColor="#FFF"
            android:textSize="26sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="-130dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <LinearLayout
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/tvNameEditAc"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etNameEdit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/bginputtask"
                android:hint="@string/etNameEditAc"
                android:inputType="text"
                android:paddingLeft="12dp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="#B5B5B5" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/tvPriceEditAc"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etPriceEdit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/bginputtask"
                android:hint="@string/etPriceEditAc"
                android:inputType="text"
                android:maxLength="25"
                android:paddingLeft="12dp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="#B5B5B5" />

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/tvCategoryEditAc"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spCateEdit"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:background="@drawable/bginputtask"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/tvDesEditAc"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etDesEdit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/bginputtask"
                android:hint="@string/etDesEditAc"
                android:inputType="text"
                android:paddingLeft="12dp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="#B5B5B5" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/tvPicEditAc"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imgEdit"
                android:src="@drawable/addpicicon"
                android:scaleType="centerCrop"
                android:cropToPadding="false"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:layout_width="150dp"
                android:layout_height="120dp"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btConfirmEdit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/bgbuttoncreate"
        android:text="@string/btConfirm"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="22sp" />

    <Button
        android:id="@+id/btDeleteEdit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/bgbuttondelete"
        android:text="@string/btDelete"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="22sp" />

    <Button
        android:id="@+id/btCancelEdit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/bgbuttoncancel"
        android:text="@string/btCancel"
        android:textAllCaps="false"
        android:textSize="22sp" />


</LinearLayout>