<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgadd"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgChangePass"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:src="@drawable/logo2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/tvChangePass"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginLeft="5dp"
                android:text="@string/tvOldPass"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/etOldPass"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="4"
                android:layout_marginRight="5dp"
                android:background="@drawable/bginputtask"
                android:hint="@string/etOldPass"
                android:inputType="text"
                android:paddingLeft="12dp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="#B5B5B5" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="2"
                android:text="@string/tvNewPass"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/etNewPass"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginRight="5dp"
                android:layout_weight="4"
                android:background="@drawable/bginputtask"
                android:hint="@string/etNewPass"
                android:inputType="text"
                android:paddingLeft="12dp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="#B5B5B5" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/tvNewPass2"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:layout_weight="2"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/etNewPass2"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/bginputtask"
                android:hint="@string/etPassword2"
                android:inputType="text"
                android:paddingLeft="12dp"
                android:layout_weight="4"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="#B5B5B5" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:weightSum="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btConfirmPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/bgbuttoncreate"
                android:text="@string/btConfirm" />

            <Button
                android:id="@+id/btCancelPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/bgbuttoncancel"
                android:text="@string/btCancel" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>